Fix language currency selector invisibl eissue on safari

--- a/web/stylesheet/_sidenav_responsive.scss
+++ b/web/stylesheet/_sidenav_responsive.scss
@@ -41,8 +41,12 @@ $breakpointTablet: 768px;
   background: white;
   position: fixed;
   bottom: 0;
-  margin:2px 5px;
+  padding: 2px 5px;
   flex-direction: row;
+  opacity: 0.95;
+  box-shadow: 0px 4px 12px 0 rgba(0, 0, 0, 0.1);
+  z-index: 999;
+  transition: all 0.5s ease-in-out;
   a {
     max-width: 100%;
     img {
